# Shared-Perspective-Index

./: .gitignore  Cargo.toml  README.md  default.nix
workdir/: dna.yaml  shared-perspectives.dna
zomes/shared_perspective_index/: Cargo.toml
zomes/shared_perspective_index/src/: inputs.rs  lib.rs  utils.rs
zomes/tests/: index.ts  package-lock.json  package.json
