[workspace]
members = [
  "zomes/shared_perspective_index",
]

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[patch.crates-io]
hdk = { git = "https://github.com/holochain/holochain", rev="1ff2cc2935e6a2bfbb95aef5f2860eb09b467b49", package="hdk"}
holo_hash = { git = "https://github.com/holochain/holochain", rev="1ff2cc2935e6a2bfbb95aef5f2860eb09b467b49", package="holo_hash"}